# hyperliquid-trading-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  sniper_bot.py  test_bot.py  test_paper_trading.py
bots/: btc_conservative.yaml
learning_examples/01_authentication/: basic_connection.py
learning_examples/01_websockets/: realtime_prices.py
learning_examples/02_market_data/: get_all_prices.py  get_market_metadata.py
learning_examples/03_account_info/: get_open_orders.py  get_user_state.py
learning_examples/04_trading/: cancel_orders.py  place_limit_order.py
learning_examples/05_funding/: check_spot_perp_availability.py  get_funding_rates.py
learning_examples/05_websockets/: realtime_prices.py
learning_examples/06_copy_trading/: mirror_spot_orders.py  raw_messages.py  track_all_orders.py
src/: __init__.py  backtesting.rs  config.rs  endpoints.rs  engine.rs  errors.rs  events.rs  exchange.rs  interfaces.rs  key_manager.rs  leaderboard.rs  lib.rs  main.rs  market_data.rs  mirroring.rs  risk.rs  run_bot.py
src/backtesting/: README.md  hyperliquid_btc_ema_twap_backtest.py  hyperliquid_data_fetcher.py
src/core/: endpoint_router.py  engine.py  enhanced_config.py  key_manager.py  risk_manager.py
src/exchanges/: __init__.py
src/exchanges/hyperliquid/: __init__.py  adapter.py  market_data.py
src/interfaces/: __init__.py  exchange.py  strategy.py
src/strategies/: __init__.py  grid.rs  mod.rs
src/strategies/grid/: __init__.py  basic_grid.py
src/utils/: __init__.py  events.py  exceptions.py
tests/: backtesting.rs  leaderboard.rs  spot_mirror.rs
tests/integration/: test_backtesting_nautilus.py
